[project]
name = "nonebot-adapter-walleq"
version = "0.1.1"
requires-python = ">=3.8"
authors = [{ name = "AbrahumLink", email = "307887491@qq.com" }]
description = "Just run walle-q in nonebot2"
readme = "README.md"
dependencies = ["nonebot-adapter-onebot~=2.2.2"]
keywords = ["nonebot", "nonebot2", "bot", "walleq"]

[project.urls]
documentation = "https://github.com/onebot-walle/nonebot_adapter_walleq#readme"
hongpage = "https://github.com/onebot-walle/nonebot_adapter_walleq"
repository = "https://github.com/onebot-walle/nonebot_adapter_walleq"

[build-system]
build-backend = "maturin"
requires = ["maturin>=0.14,<0.15"]
